# skills_mcp_server

./: Dockerfile  LICENSE  README.md  docker-compose.yml  env.example  inspect_agno.py  main.py  mcp_server.py  models.py  n8n_workflow_example.json  pyproject.toml  routes.py  s3_skills.py  services.py
.github/workflows/: docker-publish.yml  tests.yml
tests/: conftest.py  test_mcp_server.py  test_models.py  test_routes.py  test_services.py
