[project]
name = "skills-mcp-server"
version = "0.1.0"
description = "A centralized MCP server for managing and executing Agno agent skills."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agno>=1.4.4",
    "boto3>=1.38.0",
    "fastapi>=0.135.1",
    "fastmcp>=3.1.0",
    "httpx>=0.28.1",
    "python-dotenv>=1.1.0",
    "uvicorn[standard]>=0.34.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
]
